force-app/main/default/objects/Integration_Entity_Definition__c/Integration_Entity_Definition__c.object-meta.xml
<CustomObject>
    <label>Integration Entity Definition</label>
    <nameField>
        <label>Entity Definition Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Integration Entity Definitions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>