force-app/main/default/objects/Integration_Entity_Definition__c/fields/External_Entity__c.field-meta.xml
<CustomField>
    <fullName>External_Entity__c</fullName>
    <label>External Entity</label>
    <length>120</length>
    <required>true</required>
    <type>Text</type>
</CustomField>