force-app/main/default/objects/Integration_Entity_Definition__c/fields/Integration_Key__c.field-meta.xml
<CustomField>
    <fullName>Integration_Key__c</fullName>
    <label>Integration Key</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>